--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-tensorflow_gpu==1.6.0
-numpy==1.13.1
-opencv_python==3.2.0.7
-matplotlib==2.0.2
+tensorflow_gpu==1.15.0
+numpy
+opencv_python
+matplotlib
 keras==2.1.5
-captcha==0.2.4
-Pillow==5.1.0
-pandas==0.23.0
-tqdm==4.24.0
+captcha
+Pillow
+pandas
+tqdm
 
 
 
